# egui_extended

./: Cargo.toml  readme.md
examples/: widget_showcase.rs
src/: connected_tabs.rs  custom_frame.rs  internal.rs  lib.rs  prelude.rs  switch.rs  tabs.rs  util.rs  visuals_modifiers.rs  widget_placement.rs
src/custom_frame/: mod.rs  title_bar_buttons.rs  title_bar_buttons_kind.rs
src/native_visuals/: conversions.rs  mod.rs  theme_loaders.rs
